Tercera pre entrega

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15"
   },
-  "dependencies": {},
+  "dependencies": {
+    "sass": "^1.51.0"
+  },
   "keywords": [],
   "description": ""
 }
